--- a/vignettes/minimal-rstan-package.Rmd
+++ b/vignettes/minimal-rstan-package.Rmd
@@ -217,15 +217,20 @@ The `#' @description` section can be manually edited to provided specific inform
 
 ## Documentation
 
-With __roxygen__ documentation enabled, we need to generate the documentation for `lm_stan` and update the `NAMESPACE` so the function is exported, i.e., available to users when the package is installed.  This can be done with the function `roxygen2::roxygenize`:
+With __roxygen__ documentation enabled, we need to generate the documentation for `lm_stan` and update the `NAMESPACE` so the function is exported, i.e., available to users when the package is installed.  This can be done with the function `roxygen2::roxygenize`.
 
 ```{r, eval=FALSE}
+pkgbuild::compile_dll() # see note below
 roxygen2::roxygenize()
 ```
-```{r, echo=FALSE}
-suppressMessages(roxygen2::roxygenize(PATH))
+```{r, include=FALSE}
+pkgbuild::compile_dll(PATH) # required for newer versions of roxygen2
+```
+```{r, echo = FALSE}
+roxygen2::roxygenize(PATH)
 ```
 
+__Note:__ For newer versions of __roxygen__, it is necessary to compile the package C++ code prior to running `roxygen2::roxygenize`.  One way to do this is with the __pkgbuild__ package function `compile_dll`, as above.
 
 ## Install and use
 
