fix vignette for cran
[ci skip]

--- a/vignettes/minimal-rstan-package.Rmd
+++ b/vignettes/minimal-rstan-package.Rmd
@@ -273,8 +273,11 @@ documentation, you can set `quick=TRUE` to speed up the process, or use
 
 After installation, the package can be loaded and used like any other R package:
 
-```{r}
+```{r, eval=FALSE}
 library("rstanlm")
+```
+
+```{r}
 fit <- lm_stan(y = rnorm(10), x = rnorm(10), 
                # arguments passed to sampling
                iter = 2000, refresh = 500)
