--- a/vignettes/minimal-rstan-package.Rmd
+++ b/vignettes/minimal-rstan-package.Rmd
@@ -239,8 +239,9 @@ available to users when the package is installed.  This can be done with the
 function `roxygen2::roxygenize()`.
 
 ```{r, eval=FALSE}
-pkgbuild::compile_dll() # see note below
-roxygen2::roxygenize()
+example(source) # defines the sourceDir() function
+roxygen2::roxygenize(load_code = sourceDir)
+pkgbuild::compile_dll()
 ```
 ```{r, include=FALSE}
 pkgbuild::compile_dll(PATH) # required for newer versions of roxygen2
@@ -248,10 +249,6 @@ pkgbuild::compile_dll(PATH) # required for newer versions of roxygen2
 ```{r, echo=FALSE}
 roxygen2::roxygenize(PATH)
 ```
-
-__Note:__ For newer versions of __roxygen__, it is necessary to compile the
-package C++ code prior to running `roxygen2::roxygenize()`.  One way to do this
-is with `pkgbuild::compile_dll()`, as above.
 
 ## Install and use
 
