--- a/vignettes/minimal-rstan-package.Rmd
+++ b/vignettes/minimal-rstan-package.Rmd
@@ -186,7 +186,7 @@ ensures that the function has a help file and that it is added to the package
 #'
 #' @export
 #' @param x Numeric vector of input values.
-#' @param y Numberic vector of output values.
+#' @param y Numeric vector of output values.
 #' @param ... Arguments passed to `rstan::sampling` (e.g. iter, chains).
 #' @return An object of class `stanfit` returned by `rstan::sampling`
 #'
@@ -205,7 +205,7 @@ Rcode <- "
 #'
 #' @export
 #' @param x Numeric vector of input values.
-#' @param y Numberic vector of output values.
+#' @param y Numeric vector of output values.
 #' @param ... Arguments passed to `rstan::sampling`.
 #' @return An object of class `stanfit` returned by `rstan::sampling`
 lm_stan <- function(x, y, ...) {
