use writeLines() instead of cat()
following instructions from Kurt

--- a/vignettes/developer-guidelines.Rmd
+++ b/vignettes/developer-guidelines.Rmd
@@ -6,7 +6,7 @@ output:
   rmarkdown::html_vignette:
     toc: true
 vignette: >
-  %\VignetteIndexEntry{Developer Guidelines}
+  %\VignetteIndexEntry{Guidelines for Developers of R Packages Interfacing with Stan}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
