--- a/vignettes/minimal-rstan-package.Rmd
+++ b/vignettes/minimal-rstan-package.Rmd
@@ -236,20 +236,18 @@ information about the package.
 With __roxygen__ documentation enabled, we need to generate the documentation
 for `lm_stan` and update the `NAMESPACE` so the function is exported, i.e.,
 available to users when the package is installed.  This can be done with the
-function `roxygen2::roxygenize()`.
+function `roxygen2::roxygenize()`, which needs to be called twice initially.
 
 ```{r, results = "hide"}
 example(source) # defines the sourceDir() function
 ```
 ```{r, eval = FALSE}
 try(roxygen2::roxygenize(load_code = sourceDir), silent = TRUE)
-pkgbuild::compile_dll()
 roxygen2::roxygenize()
 ```
 ```{r, echo=FALSE}
 try(roxygen2::roxygenize(PATH, load_code = sourceDir), silent = TRUE)
 rm(lm_stan)
-pkgbuild::compile_dll(PATH)
 roxygen2::roxygenize(PATH)
 ```
 
